# CoronaEngine-1

./: CMakeLists.txt  CMakePresets.json  sync-deps.bat
assets/shaders/: composite.comp.glsl  debug_resolve.comp.glsl  imgui.frag.glsl  imgui.vert.glsl  lighting.comp.glsl  material_resolve.comp.glsl  sky.comp.glsl  test.comp.glsl  test.frag.glsl  test.vert.glsl  tonemap.comp.glsl  visibility.frag.glsl  visibility.vert.glsl
docs/: CPP_DEPENDENCY.md  CPP_DEPENDENCY.zh.md  LOG_CALLBACK_DESIGN_cn.md  PYTHON_API_EXAMPLES.md
engine/: RuntimeLoop.cpp
examples/: CMakeLists.txt
examples/cef_subprocess/: CMakeLists.txt  main.cpp
examples/engine/: CMakeLists.txt  main.cpp
examples/system_hubs_sanity/: main.cpp
include/corona/: shader_include.h  shared_data_hub.h
include/corona/api/: CoronaEngineAPI.h
include/corona/core/: Engine.h
include/corona/core/components/: SceneComponents.h
include/corona/core/detail/: EngineKernel.h  SystemHubs.h
include/corona/events/: display_system_events.h  imgui_system_events.h  optics_system_events.h  script_system_events.h
include/corona/interfaces/: SystemContext.h  ThreadedSystem.h
include/corona/systems/: RenderingSystem.h
include/corona/systems/display/: display_system.h
include/corona/systems/imgui/: imgui_system.h
include/corona/systems/imgui/res/: BrowserWindow.h
include/corona/systems/optics/: optics_system.h
include/corona/systems/script/: corona_engine_api.h  engine_scripts.h  python_api.h  script_system.h
include/corona/systems/ui/: cabbage_ui_backend.h  imgui_system.h  ui_render_backend.h  vulkan_backend.h
include/corona/utils/: path_utils.h
misc/cmake/: corona_cef.cmake  corona_compile_config.cmake  corona_editor.cmake  corona_helicon_shader_compile_override.cmake  corona_imgui.cmake  corona_options.cmake  corona_runtime_deps.cmake  corona_third_party.cmake
misc/pytools/: editor_copy_and_build.py
src/: CMakeLists.txt  engine.cpp  shared_data_hub.cpp
src/core/: CoronaEngineAPI.cpp  Engine.cpp  EngineKernel.cpp
src/script/python/: PythonAPI.cpp  PythonHotfix.cpp
src/systems/animation/: AnimationSystem.cpp
src/systems/audio/: AudioSystem.cpp
src/systems/display/: CMakeLists.txt  DisplaySystem.cpp  display_system.cpp
src/systems/imgui/: CMakeLists.txt  imgui_system.cpp  test.html  test.py  vulkan_backend.cpp
src/systems/imgui/res/: BrowserWindow.cpp  WindowsManager.cpp
src/systems/mechanics/: mechanics_system.cpp
src/systems/optics/: CMakeLists.txt  hardware.h  optics_system.cpp
src/systems/rendering/: CMakeLists.txt  RenderingSystem.cpp
src/systems/script/: CMakeLists.txt  script_system.cpp
src/systems/script/include/corona/systems/script/: engine_scripts.h  python_api.h  python_hotfix.h
src/systems/script/python/: corona_engine_api.cpp  corona_engine_module.cpp  engine_bindings.cpp  python_api.cpp
src/systems/ui/: CMakeLists.txt  imgui_system.cpp  test.html  test.py  ui_layout_manager.cpp  vulkan_backend.cpp
src/systems/ui/browser/: browser_manager.cpp  browser_manager.h  browser_types.h  browser_window.cpp  browser_window.h  cef_client.cpp  cef_client.h  cef_handler.cpp  cef_handler.h  cef_py_bind.cpp  imgui_browser_handler.cpp  imgui_browser_handler.h  sdl_key_utils.cpp  sdl_key_utils.h
src/systems/ui/cef/: browser_input_handler.cpp  browser_input_handler.h  browser_manager.cpp  browser_manager.h  browser_renderer.cpp  browser_renderer.h  browser_types.h  browser_ui.cpp  browser_ui.h  cef_client.cpp  cef_client.h  cef_handler.cpp  cef_handler.h  cef_py_bind.cpp  cef_runtime.cpp  cef_runtime.h  pending_key_event.h
src/systems/ui/chw/: browser_manager_hardware.cpp  cabbage_ui_backend.cpp
src/systems/ui/imgui/: imgui_runtime.cpp  imgui_runtime.h  imgui_ui.cpp  imgui_ui.h  ui_frame_runner.cpp  ui_frame_runner.h  ui_layout_manager.h
src/systems/ui/res/: BrowserWindow.cpp  BrowserWindow.h  browser_types.h  browser_window.cpp  cef_client.cpp  cef_client.h  cef_handler.cpp  cef_handler.h  cef_py_bind.cpp
src/systems/ui/sdl/: sdl_event_handler.cpp  sdl_event_handler.h  sdl_mouse_utils.cpp  sdl_mouse_utils.h  sdl_utils.cpp  sdl_utils.h
src/systems/ui/vulk/: browser_manager_vulkan.cpp  vulkan_backend.cpp
src/systems/ui/vulkan/: browser_manager_vulkan.cpp
src/thread/: CMakeLists.txt
